完成用户基本信息页面

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
       <ul class="layui-nav layui-layout-right">
         <li class="layui-nav-item layui-hide layui-show-md-inline-block l-center">
           <a href="javascript:;" class="userinfo">
-            <img src="assets/image/index/user.png" class="layui-nav-img">
+            <!-- <img src="" class="layui-nav-img"> -->
             <!-- 默认用户 -->
-            <span class="text-avater avater">A</span>
+            <span class="text-avater avater">|</span>
             <span>个人中心</span>
           </a>
           <dl class="layui-nav-child">
-            <dd><a href="">基本资料</a></dd>
-            <dd><a href="">更换头像</a></dd>
-            <dd><a href="">重置密码</a></dd>
+            <dd><a href="./user/user-info.html" target="fm">基本资料</a></dd>
+            <dd><a href="./user/user-avatar.html" target="fm">更换头像</a></dd>
+            <dd><a href="./user/user-reg.html" target="fm">重置密码</a></dd>
             <dd id="sign-out"><a href="javascript:;">退出</a></dd>
           </dl>
         </li>
@@ -41,7 +41,7 @@
       <div class="layui-side-scroll">
         <!-- 左侧导航区域（可配合layui已有的垂直导航） lay-shrink代表值展示一项菜单-->
         <div class="userinfo">
-          <img src="assets/image/index/user.png" class="layui-nav-img">
+          <!-- <img src="" class="layui-nav-img"> -->
           <span class="text-avater"></span>
           <span class="welcmon-user">欢迎 ****</span>
         </div>
@@ -73,15 +73,15 @@
             <a href="javascript:;"><i class="czs-user-l"></i>&nbsp;&nbsp;个人中心</a>
             <dl class="layui-nav-child">
               <dd>
-                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料
+                <a href="./user/user-info.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料
                 </a>
               </dd>
               <dd>
-                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像
+                <a href="./user/user-avatar.html" target="fm"><i class="layui-icon layui-icon-app"></i>更换头像
                 </a>
               </dd>
               <dd>
-                <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码
+                <a href="./user/user-reg.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码
                 </a>
               </dd>
             </dl>
