--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
   <!-- 导入统一的接口 -->
   <script src="assets/js/baseApi.js"></script>
   <!-- 导入登录页面和注册页面的js -->
-  <script src="assets/js/login.js"></script>
+  <script src="assets/js/login-reg.js"></script>
 </body>
 
 </html>
