--- a/user/user-reg.html
+++ b/user/user-reg.html
@@ -6,11 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>重置密码</title>
-  <link rel="stylesheet" href="/assets/lib/normalize.css">
-  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-  <link rel="stylesheet" href="/assets/css/user/user-reg.css">
-  <script src="/assets/lib/layui/layui.js"></script>
-  <script src="/assets/lib/jquery.js"></script>
+  <link rel="stylesheet" href="../assets/lib/normalize.css">
+  <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+  <link rel="stylesheet" href="../assets/css/user/user-reg.css">
+  <script src="../assets/lib/layui/layui.js"></script>
+  <script src="../assets/lib/jquery.js"></script>
 </head>
 
 <body>
@@ -52,8 +52,8 @@
       </form>
     </div>
   </div>
-  <script src="/assets/js/baseApi.js"></script>
-  <script src="/assets/js/user/user-reg.js"></script>
+  <script src="../assets/js/baseApi.js"></script>
+  <script src="../assets/js/user/user-reg.js"></script>
 </body>
 
 </html>
