--- a/article/art-list.html
+++ b/article/art-list.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>文章列表</title>
-  <link rel="stylesheet" href="/assets/lib/normalize.css">
-  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-  <link rel="stylesheet" href="/assets/css/article/art-list.css">
-  <script src="/assets/lib/template-web.js"></script>
-  <script src="/assets/lib/layui/layui.js"></script>
-  <script src="/assets/lib/jquery.js"></script>
+  <link rel="stylesheet" href="../assets/lib/normalize.css">
+  <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+  <link rel="stylesheet" href="../assets/css/article/art-list.css">
+  <script src="../assets/lib/template-web.js"></script>
+  <script src="../assets/lib/layui/layui.js"></script>
+  <script src="../assets/lib/jquery.js"></script>
 </head>
 
 <body>
@@ -84,8 +84,8 @@
       <option value="{{$value.Id}}">{{$value.name}}</option>
     {{/each}}
   </script>
-  <script src="/assets/js/baseApi.js"></script>
-  <script src="/assets/js/article/art-list.js"></script>
+  <script src="../assets/js/baseApi.js"></script>
+  <script src="../assets/js/article/art-list.js"></script>
 </body>
 
 </html>
