--- a/article/category.html
+++ b/article/category.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/assets/lib/normalize.css">
-  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-  <link rel="stylesheet" href="/assets/css/article/category.css">
-  <script src="/assets/lib/jquery.js"></script>
-  <script src="/assets/lib/layui/layui.js"></script>
-  <script src="/assets/lib/template-web.js"></script>
+  <link rel="stylesheet" href="../assets/lib/normalize.css">
+  <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+  <link rel="stylesheet" href="../assets/css/article/category.css">
+  <script src="../assets/lib/jquery.js"></script>
+  <script src="../assets/lib/layui/layui.js"></script>
+  <script src="../assets/lib/template-web.js"></script>
 </head>
 
 <body>
@@ -111,8 +111,8 @@
       </div>
     </form>
   </script>
-  <script src="/assets/js/baseApi.js"></script>
-  <script src="/assets/js/article/category.js"></script>
+  <script src="../assets/js/baseApi.js"></script>
+  <script src="../assets/js/article/category.js"></script>
 </body>
 
 </html>
