--- a/article/write-art.html
+++ b/article/write-art.html
@@ -6,17 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>发表文章</title>
-  <link rel="stylesheet" href="/assets/lib/normalize.css">
-  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-  <link rel="stylesheet" href="/assets/css/article/write-art.css">
-  <link rel="stylesheet" href="/assets/lib/cropper/cropper.css">
-  <script src="/assets/lib/layui/layui.js"></script>
-  <script src="/assets/lib/template-web.js"></script>
-  <script src="/assets/lib/tinymce/tinymce.min.js"></script>
-  <script src="/assets/lib/tinymce/tinymce_setup.js"></script>
-  <script src="/assets/lib/jquery.js"></script>
-  <script src="/assets/lib/cropper/Cropper.js"></script>
-  <script src="/assets/lib/cropper/jquery-cropper.js"></script>
+  <link rel="stylesheet" href="../assets/lib/normalize.css">
+  <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+  <link rel="stylesheet" href="../assets/css/article/write-art.css">
+  <link rel="stylesheet" href="../assets/lib/cropper/cropper.css">
+  <script src="../assets/lib/layui/layui.js"></script>
+  <script src="../assets/lib/template-web.js"></script>
+  <script src="../assets/lib/tinymce/tinymce.min.js"></script>
+  <script src="../assets/lib/tinymce/tinymce_setup.js"></script>
+  <script src="../assets/lib/jquery.js"></script>
+  <script src="../assets/lib/cropper/Cropper.js"></script>
+  <script src="../assets/lib/cropper/jquery-cropper.js"></script>
 </head>
 
 <body>
@@ -54,7 +54,7 @@
           <div class="layui-input-block cover-box">
             <!-- 左侧裁剪区域 -->
             <div class="cover-left">
-              <img id="image" src="/assets/image/art/AA.png" alt="" />
+              <img id="image" src="../assets/image/art/AA.png" alt="" />
             </div>
             <!-- 右侧预览区域和选择封面区域 -->
             <div class="cover-right">
@@ -79,8 +79,8 @@
       </form>
     </div>
   </div>
-  <script src="/assets/js/baseApi.js"></script>
-  <script src="/assets/js/article/write-art.js"></script>
+  <script src="../assets/js/baseApi.js"></script>
+  <script src="../assets/js/article/write-art.js"></script>
   <script type="text/html" id="tpl-cate">
     <option value="">请选择文章类别</option>
     {{each}}
