--- a/user/user-avatar.html
+++ b/user/user-avatar.html
@@ -6,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>更换头像</title>
-  <link rel="stylesheet" href="/assets/lib/normalize.css">
-  <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
-  <link rel="stylesheet" href="/assets/lib/cropper/cropper.css">
-  <link rel="stylesheet" href="/assets/css/user/user-avatar.css">
-  <script src="/assets/lib/layui/layui.js"></script>
-  <script src="/assets/lib/jquery.js"></script>
-  <script src="/assets/lib/cropper/Cropper.js"></script>
-  <script src="/assets/lib/cropper/jquery-cropper.js"></script>
+  <link rel="stylesheet" href="../assets/lib/normalize.css">
+  <link rel="stylesheet" href="../assets/lib/layui/css/layui.css">
+  <link rel="stylesheet" href="../assets/lib/cropper/cropper.css">
+  <link rel="stylesheet" href="../assets/css/user/user-avatar.css">
+  <script src="../assets/lib/layui/layui.js"></script>
+  <script src="../assets/lib/jquery.js"></script>
+  <script src="../assets/lib/cropper/Cropper.js"></script>
+  <script src="../assets/lib/cropper/jquery-cropper.js"></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <!-- 图片裁剪区域 -->
         <div class="cropper-box">
           <!-- 这个 img 标签很重要，将来会把它初始化为裁剪区域 -->
-          <img id="image" src="/assets/image/art/wallhaven-yjyp1d_1920x1080.png" />
+          <img id="image" src="../assets/image/art/wallhaven-yjyp1d_1920x1080.png" />
         </div>
         <!-- 图片的预览区域 -->
         <div class="preview-box">
@@ -51,8 +51,8 @@
       </div>
     </div>
   </div>
-  <script src="/assets/js/baseApi.js"></script>
-  <script src="/assets/js/user/user-avatar.js"></script>
+  <script src="../assets/js/baseApi.js"></script>
+  <script src="../assets/js/user/user-avatar.js"></script>
 </body>
 
 </html>
